# SIDESPLITTER

./: CMakeLists.txt  README.md  compile.sh  fouriers.c  fouriers.h  interact.c  main.c  realspace.c  realspace.h  sidesplitter  sidesplitter.h  sidesplitter_wrapper.sh  suppress.c  suppress.h  truncate.c  truncate.h
